--- a/client/example.html
+++ b/client/example.html
@@ -1,14 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8"/>
     <title>AMFJS</title>
     <script src="amf.js" type="text/javascript"></script>
-    <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
     <script type="text/javascript">
-        var amfClient = new amf.Client("amfphp", "https://amf.nic3ts.com/gateway.php");
+        var amfClient = new amf.Client("amfphp", "http://127.0.0.1/server/gateway.php");
         var p = amfClient.invoke("test-name-does-not-matter", "ping", []);
 
         p.then(
@@ -22,3 +20,14 @@
     </script>
 </body>
 </html>
+
+
+<!--
+
+<Directory />
+    Options FollowSymLinks
+    AllowOverride None
+    Require all denied
+</Directory>
+
+-->
